tests/miniJava/neg/006918_mutation.MiniJava
public int [] java ( ) { return 0 ; } class java { public static void Main ( String [ ] java ) { { } } }
